welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: type mismatch;
 found   : Unit
 required: Boolean
  	if (cptSuite=0)
                    ^